css/style.css
/* i added some design steps that i learned alone :) */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Nunito';
}

header {
    display: flex;
    width: 100%;
    height: 64px;
    align-items: center;
    flex-wrap: wrap;
    background: #fff;
}

#container {
    display: flex;
    align-items: center;
    width: 100%;
}

#earringlogo img {
    width: 64px;
    height: 64px;
    margin-top: 32px;
    margin-left: 32px;
    cursor: pointer;
}

#logoText {
    color: #3E3F43;
    font-family: Nunito;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: 100%;
    letter-spacing: 25%;
}

header nav {
    margin-left: auto;
    padding-right: 32px;
}

header nav ul {
    list-style: none;
    display: flex;
    align-items: center;
    gap: 32px;
}

header nav a {
    text-decoration: none;
    transition: color 0.3s ease;
    color: #612999;
    font-family: Nunito;
    font-size: 30px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    cursor: pointer;
}

header nav a.active {
    color: #612999;
    font-family: Nunito;
    font-size: 30px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    font-weight: bold;
}

header nav a:hover {
    color: rgb(204, 38, 176);
}

.top_section {
    height: 797px;
    flex-shrink: 0;
    background-image: url('../images/earringbg.webp');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    font-family: 'Nunito';
    font-style: normal;
    line-height: normal;
}

.top_section h1 {
    color: #612999;
    font-size: 96px;
    font-weight: 800;
    width: 448px;
    margin-left: 32px;
}

.top_section p {
    color: #000;
    font-size: 24px;
    font-weight: 600;
    width: 448px;
    padding-left: 32px;
}

h2 {
    color: #612999;
    font-family: Rubik;
    font-size: 40px;
    font-style: normal;
    font-weight: 500;
    line-height: 40px;
    margin: 32px 0;
}

#wrapper {
    margin: 32px;
    display: flex;
    flex-direction: column;
}

.about_section p {
    color: #000;
    text-align: justify;
    font-family: Rubik;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 140.625%;
    margin-bottom: 32px;
}

footer {
    display: flex;
    background: #EFECFF;
    position: flex;
    bottom: 0px;
    max-width: 100%;
}

.footer_item {
    display: flex;
    flex-direction: column;
    width: 200px;
    margin: 32px;
}

h3 {
    color: #333;
    font-family: 'Nunito';
    font-size: 18px;
    font-weight: 700;
    text-transform: uppercase;
    margin-bottom: 16px;
    text-decoration: none;
}

.footer_item a {
    color: #333;
    font-family: 'Nunito';
    font-size: 16px;
    font-weight: 400;
    margin-bottom: 8px;
    text-decoration: none;
    cursor: pointer;
}

.footer_item span {
    color: #333;
    font-family: 'Nunito';
    font-size: 16px;
    font-weight: 600;
    text-decoration: none;
}

.footer_contains {
    margin-top: 24px;
    margin-bottom: 16px;
}

.footer_contains a {
    margin-right: 24px;
    color: #272D4E;
}

.footerIcons i {
    fill: #272D4E;
}

.earrings_container {
    width: 784px;
    height: 1096px;
    display: flex;
    flex-wrap: wrap;
    gap: 32px;
    margin-bottom: 32px;
}

.earring {
    display: flex;
    flex-direction: column;
    width: 376px;
    height: 496px;
    border-radius: 38px;
    background: #EFECFF;
    box-shadow: 0px 6px 40px 0px rgba(57, 132, 187, 0.05);
    position: relative;
    transition: transform 0.3s, box-shadow 0.3s;
}

.earring:hover {
    transform: scale(1.05);
    box-shadow: 0px 12px 40px 0px rgba(57, 132, 187, 0.15);
}

.earring img {
    width: 376px;
    height: 276px;
    border-radius: 32px 32px 0px 0px;
}

.earring h4 {
    color: #000;
    text-align: justify;
    font-family: Abel;
    font-size: 30px;
    font-weight: 400;
    padding-left: 32px;
    padding-top: 21px;
}

.earring p {
    color: #333;
    font-family: Abel;
    font-size: 18px;
    font-weight: 400;
    width: 315px;
    padding-top: 7px;
    padding-left: 32px;
}

.earring .price {
    color: #612999;
    text-align: justify;
    font-family: Abel;
    font-size: 35px;
    font-weight: 400;
    margin-top: 13px;
    margin-bottom: 36px;
}

.heart,
.shoppingCart {
    border-radius: 50%;
    position: absolute;
    background-repeat: no-repeat;
    background-position: center;
    transition: background-color 0.3s;
    border: none;
    outline: none;
}

.heart {
    background-color: #EFECFF;
    background-image: url("../images/hearticon.svg");
    width: 47px;
    height: 47px;
    top: 20px;
    right: 20px;
    cursor: pointer;
}

.heart:hover {
    background-color: #FFCDD2;
}

.shoppingCart {
    background-color: #612999;
    background-image: url("../images/shoppingcarticon.svg");
    width: 63px;
    height: 63px;
    bottom: 20px;
    right: 20px;
    cursor: pointer;
}

.shoppingCart:hover {
    background-color: #9575CD;
}

main ul li {
    display: flex;
    align-items: center;
    color: #000;
    font-family: Rubik;
    font-size: 24px;
    font-style: normal;
    font-weight: 400;
    line-height: 14px;
    margin-bottom: 16px;
}

/* page 2 */

.images_container {
    margin-top: 128px;
    width: 1052px;
    height: 300px;
    margin-left: 32px;
    display: flex;
}

.images_container img {
    border: 4px solid #E6DBFE;
    margin-right: 32px;
    display: block;
}

.images_container .earring1 {
    width: 300px;
    height: 300px;
    flex-shrink: 0;
}

#middimg {
    width: 388.286px;
    height: 300px;
    flex-shrink: 0;
}

.images_container .earring3 {
    width: 300px;
    height: 300px;
    flex-shrink: 0;
}

.video video {
    position: relative;
    margin-bottom: 32px;
    display: block;
    margin-left: 32px;
    margin-right: auto;
    width: 1136px;
    height: 503px;
    flex-shrink: 0;
}

main h2 {
    margin-left: 32px;
}

.earring-list {
    list-style: none;
    padding: 0;
}

.earring-list li {
    margin: 10px 0;
    margin: 32px;
    font-family: nunito;
    font-size: 16px;
    display: flex;
    align-items: center;
    color: #333;
}

.icon {
    background-image: url('../images/rocket.svg');
    background-size: cover;
    background-repeat: no-repeat;
    display: inline-block;
    background-color: #800080;
    color: white;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    text-align: center;
    line-height: 30px;
    margin-right: 10px;
}

.earring-item {
    list-style-type: none;
    width: 346px;
    height: 448px;
    margin: 460px;
}

.icon-container {
    display: inline-block;
    position: relative;
    margin-left: 32px;
    margin-right: 16px;
    vertical-align: middle;
}

.rocket-icon {
    width: 29px;
    height: 42.385px;
    position: absolute;
    top: 20px;
    left: 25px;
}

.circle-icon {
    width: 82px;
    height: 82px;
    flex-shrink: 0;
}

.your-choice {
    margin: 0 32px 32px;
}

.your-choice h3 {
    color: #612999;
    font-family: Rubik;
    font-size: 28px;
    font-weight: 500;
    margin-bottom: 16px;
}

.choice-box {
    width: 100%;
    max-width: 1100px;
    height: 180px;
    border: 2px dashed #C2AFE3;
    border-radius: 16px;
    background: #F8F5FF;
}

